Improvements in Warehouse class:
- Updated addProduct, updateProductPrice, remove methods to use Optional and ifPresentOrElse
- Refactored expiredProducts and shippableProducts using pattern matching in instanceof
- Immutable collections: replaced unmodifiableSet/List with Set.copyOf and List.copyOf
- Enhanced getProductsGroupedByCategories to return deep-immutable lists via Collectors.collectingAndThen